tests/sumo/errors/high_time/errors.sumo
Error: Invalid Time Format 'Input string '12345678901234567890' exceeds the time value range.'
Quitting (on error).
